tests/codegen/pass/000-union-simple.hyg
type t = union {
    Some: int;
    None: unit
};

// constructor
let x: t = Some{42};

match x with {
    Some{x} -> println(x);
    None{_} -> println("None")
};

let y: t = None{()};

match y with {
    Some{y} -> println(y);
    None{_} -> println("None")
};

let z: t = Some{100};

match z with {
    Some{x} -> println(x);
    None{_} -> println("None")
}