tests/codegen/fail/pattern-matching.hyg
type t = union {
    Some: int;
    None: unit;
    Hyg: int
};

let x: t = Hyg{42};

match x with {
    Some{x} -> 1;
    None{_} -> 0
}